native~/displayxr_standalone.h

// Copyright 2024-2026, DisplayXR contributors
// SPDX-License-Identifier: BSL-1.0
//
// Standalone OpenXR session for editor preview.
// Loads the DisplayXR runtime directly (bypassing Unity's OpenXR loader)
// and manages its own instance/session lifecycle.

#pragma once

#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

#if defined(_WIN32)
#define DISPLAYXR_EXPORT __declspec(dllexport)
#elif defined(__GNUC__)
#define DISPLAYXR_EXPORT __attribute__((visibility("default")))
#else
#define DISPLAYXR_EXPORT
#endif

// ============================================================================
// Session lifecycle
// ============================================================================

/// Start a standalone OpenXR session for editor preview.
/// Loads the runtime from the JSON manifest, creates instance/session,
/// and begins compositing into a shared IOSurface.
/// @param runtime_json_path Path to the OpenXR runtime JSON manifest.
/// @return 1 on success, 0 on failure.
DISPLAYXR_EXPORT int displayxr_standalone_start(const char *runtime_json_path);

/// Stop the standalone session and release all resources.
/// Safe to call even if not running.
DISPLAYXR_EXPORT void displayxr_standalone_stop(void);

/// Whether the standalone session is currently running.
DISPLAYXR_EXPORT int displayxr_standalone_is_running(void);

// ============================================================================
// Frame loop (called each EditorApplication.update tick)
//
// Flow: poll_events → begin_frame → [C# renders cameras] → submit_frame
// ============================================================================

/// Poll OpenXR events (session state changes, etc). Does NOT drive frames.
DISPLAYXR_EXPORT void displayxr_standalone_poll_events(void);

/// Begin a new frame: xrWaitFrame + xrBeginFrame + xrLocateViews.
/// @param should_render Set to 1 if the app should render, 0 if not.
/// @return 1 on success, 0 on failure or session not ready.
DISPLAYXR_EXPORT int displayxr_standalone_begin_frame(int *should_render);

/// Submit a rendered frame with stereo projection layers.
/// Acquires swapchain images, blits from the provided textures, releases, and
/// calls xrEndFrame with projection layers.
/// @param left_tex  Native texture pointer (id<MTLTexture>) for left eye.
/// @param right_tex Native texture pointer (id<MTLTexture>) for right eye.
/// @return 1 on success, 0 on failure.
DISPLAYXR_EXPORT int displayxr_standalone_submit_frame(void *left_tex, void *right_tex);

/// End the current frame with no layers (keeps session alive when not rendering).
DISPLAYXR_EXPORT void displayxr_standalone_end_frame_empty(void);

// ============================================================================
// Stereo view computation (Kooima projection via display3d library)
// ============================================================================

/// Compute display-centric Kooima stereo view and projection matrices
/// from the current eye tracking data and display geometry.
/// Matrices are column-major, OpenXR/OpenGL convention.
/// @param near_z  Near clip plane distance (meters).
/// @param far_z   Far clip plane distance (meters).
/// @param left_view   Output float[16] left view matrix.
/// @param left_proj   Output float[16] left projection matrix.
/// @param right_view  Output float[16] right view matrix.
/// @param right_proj  Output float[16] right projection matrix.
/// @param valid       Set to 1 if matrices are valid, 0 if not.
DISPLAYXR_EXPORT void displayxr_standalone_compute_stereo_views(
    float near_z, float far_z,
    float *left_view, float *left_proj,
    float *right_view, float *right_proj,
    int *valid);

// ============================================================================
// Tunables + display pose (mirror of hook chain's set_tunables/set_scene_transform)
// ============================================================================

/// Set stereo tunables for the standalone session.
DISPLAYXR_EXPORT void displayxr_standalone_set_tunables(
    float ipd_factor, float parallax_factor, float perspective_factor,
    float virtual_display_height, float inv_convergence_distance, float fov_override,
    float near_z, float far_z, int camera_centric);

/// Set display pose (parent camera transform) for the standalone session.
DISPLAYXR_EXPORT void displayxr_standalone_set_display_pose(
    float pos_x, float pos_y, float pos_z,
    float ori_x, float ori_y, float ori_z, float ori_w,
    float scale_x, float scale_y, float scale_z,
    int enabled);

// ============================================================================
// Queries
// ============================================================================

/// Get display info from the standalone session.
DISPLAYXR_EXPORT void displayxr_standalone_get_display_info(
    float *display_width_m, float *display_height_m,
    uint32_t *pixel_width, uint32_t *pixel_height,
    float *nominal_x, float *nominal_y, float *nominal_z,
    float *scale_x, float *scale_y,
    int *supports_mode_switch, int *is_valid);

/// Get eye positions from the standalone session.
DISPLAYXR_EXPORT void displayxr_standalone_get_eye_positions(
    float *lx, float *ly, float *lz,
    float *rx, float *ry, float *rz,
    int *is_tracked);

/// Get the shared texture info from the standalone session.
DISPLAYXR_EXPORT void displayxr_standalone_get_shared_texture(
    void **native_ptr, uint32_t *width, uint32_t *height, int *ready);

/// Get per-eye swapchain dimensions (for creating matching RenderTextures in C#).
DISPLAYXR_EXPORT void displayxr_standalone_get_swapchain_size(
    uint32_t *width, uint32_t *height);

// ============================================================================
// Display mode switching
// ============================================================================

/// Request 2D or 3D display mode.
/// @param mode_3d 1 for 3D, 0 for 2D.
/// @return 1 on success, 0 on failure or not supported.
DISPLAYXR_EXPORT int displayxr_standalone_request_display_mode(int mode_3d);

/// Request a vendor-specific rendering mode by index.
/// @param mode_index Mode index from enumeration (0 = standard).
/// @return 1 on success, 0 on failure or not supported.
DISPLAYXR_EXPORT int displayxr_standalone_request_rendering_mode(uint32_t mode_index);

/// Enumerate available rendering modes.
/// Two-call pattern: first call with capacity=0 to get count,
/// then allocate and call again.
/// @param capacity   Array capacity (0 for count-only query).
/// @param count      Output: number of modes available.
/// @param mode_indices  Output array of mode indices.
/// @param mode_names    Output array of mode name strings (256 chars each).
/// @return 1 on success, 0 on failure.
DISPLAYXR_EXPORT int displayxr_standalone_enumerate_rendering_modes(
    uint32_t capacity, uint32_t *count,
    uint32_t *mode_indices, char (*mode_names)[256]);

#ifdef __cplusplus
}
#endif